k8s/production/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-devops-task-backend-svc
spec:
  selector:
    app: production-devops-task-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
